<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textView_newCharacter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_word"
                android:inputType="textAutoComplete"
                android:minHeight="@dimen/min_height"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_newCharacter_race"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Race"
                android:layout_marginHorizontal="@dimen/big_padding"/>

            <Spinner
                android:id="@+id/spinner_newCharacter_characterRace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding" />

            <TextView
                android:id="@+id/textView_newCharacter_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Class"
                android:layout_marginHorizontal="@dimen/big_padding"/>

            <Spinner
                android:id="@+id/spinner_newCharacter_characterClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding" />

            <TextView
                android:id="@+id/textView_newCharacter_abilityScores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_padding"
                android:text="Ability Scores" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <TextView
                    android:id="@+id/textView_newCharacter_abiltyStr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strength"
                    app:layout_constraintBottom_toTopOf="@+id/spinner_newCharacter_abilityDex"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Strength" />

                <Spinner
                    android:id="@+id/spinner_newCharacter_abilityStr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/abilityScores"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toTopOf="@+id/guideline4"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/textView_newCharacter_abiltyDex" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.33" />

                <TextView
                    android:id="@+id/textView_newCharacter_abiltyDex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dexterity"
                    app:layout_constraintBottom_toTopOf="@+id/spinner_newCharacter_abilityStr"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Dexterity" />

                <Spinner
                    android:id="@+id/spinner_newCharacter_abilityDex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/abilityScores"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toTopOf="@+id/guideline4"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_newCharacter_abiltyStr" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.66" />

                <TextView
                    android:id="@+id/textView_newCharacter_abiltyCon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constitution"
                    app:layout_constraintBottom_toTopOf="@+id/spinner3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Constitution" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/abilityScores"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toTopOf="@+id/guideline4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/textView_newCharacter_abiltyCon" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intelligence"
                    app:layout_constraintBottom_toTopOf="@+id/spinner4"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline4" />

                <Spinner
                    android:id="@+id/spinner4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/abilityScores"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <Spinner
                    android:id="@+id/spinner5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/abilityScores"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wisdom"
                    app:layout_constraintBottom_toTopOf="@+id/spinner5"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="@+id/guideline4" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charisma"
                    app:layout_constraintBottom_toTopOf="@+id/spinner6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/guideline4" />

                <Spinner
                    android:id="@+id/spinner6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/abilityScores"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button_newCharacter_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:background="@color/colorPrimary"
                android:text="@string/button_create"
                android:textColor="@color/buttonLabel" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
